[tool.poetry]
name = "mnist-from-scratch"
version = "0.1.0"
description = ""
authors = ["Georges Petrov <georgesm.petrov@gmail.com>"]
readme = "README.md"
packages = [{include = "mnist_from_scratch"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
datasets = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
